<resources>
    <string name="app_name">Final Project</string>
    <string name="head">Clock Control</string>
    <string name="connect">CONNECT</string>
    <string name="list">LIST</string>
    <string name="countdown">COUNTDOWN</string>
    <string name="timer">TIMER</string>
    <string name="alarm">ALARM</string>
    <string name="onoff">ON/OFF</string>
    <string name="baglantexview">Enter the IP address of the device you want to connect</string>
    <string name="orn.ip">10.5.0.112</string>
    <string name="baglanip">Connect Device</string>
    <string name="devicetextviev">Devices:</string>
    <string name="entriptv">Enter Ip Adress:</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="resetButtonLabel">Reset</string>

</resources>
