<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context="com.example.akgun.final_project.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:fontFamily="cursive"
        android:textSize="56sp" />

    <LinearLayout
        android:id="@+id/linearfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        android:padding="7dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">


        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/bconnect"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/holo_orange_dark"
                android:padding="5dp"
                android:text="@string/connect" />

            <Button
                android:id="@+id/bcountdown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/holo_red_light"
                android:elevation="0dp"
                android:padding="5dp"
                android:text="@string/countdown" />

            <Button
                android:id="@+id/balarm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/holo_green_light"
                android:padding="5dp"
                android:text="@string/alarm" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            android:padding="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">


            <Button
                android:id="@+id/blist"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:padding="5dp"

                android:text="@string/list" />

            <Button
                android:id="@+id/btimer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:background="@android:color/holo_blue_dark"
                android:padding="5dp"

                android:text="@string/timer" />

            <Button
                android:id="@+id/bonoff"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:background="@android:color/holo_purple"
                android:padding="5dp"

                android:text="@string/onoff" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
