<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.akgun.final_project.MainActivity">



    <TextView
    android:id="@+id/timerValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/pauseButton"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="37dp"
    android:textSize="40sp"
    android:textColor="#ffffff"
    android:text="@string/timerVal" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginLeft="38dp"
        android:background="@android:color/darker_gray"
        android:text="@string/startButtonLabel"
        android:textColor="@android:color/black"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="76dp" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginRight="38dp"
        android:background="@android:color/darker_gray"
        android:text="@string/pauseButtonLabel"
        android:textColor="@android:color/black"
        android:layout_marginStart="51dp"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_toEndOf="@+id/startButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="TextView" />


</RelativeLayout>
