<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:background="@android:color/holo_blue_light"
    android:contextClickable="true"
    tools:context="com.example.akgun.final_project.MainActivity">


    <TextView
        android:id="@+id/baglanTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/baglantexview"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText_Ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:inputType="textPersonName"
        android:text="@string/orn.ip" />

    <Button
        android:id="@+id/b_addIp"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText_Ip"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/baglanip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b_addIp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/devicetextviev"
            android:textSize="24sp" />

        <ListView

            android:id="@+id/DeviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:headerDividersEnabled="false"
            tools:listitem="@android:layout/activity_list_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/entriptv"
        android:textSize="19sp"
        android:layout_below="@+id/baglanTv"
        android:layout_alignStart="@+id/baglanTv"
        android:layout_marginStart="47dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_addIp"
        android:layout_alignEnd="@+id/baglanTv"
        android:text="TextView" />


</RelativeLayout>
